<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name" />

    <TextView
        android:id="@+id/tv_class_name"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/warmup_duration_seconds" />

    <TextView
        android:id="@+id/tv_warmup_duration"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/warmup_cycles" />

    <TextView
        android:id="@+id/tv_warmup_cycles"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/average_time_per_task_during_warmup_nanoseconds" />

    <TextView
        android:id="@+id/tv_warmup_avg_time"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold" />

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/benchmarking_duration_seconds" />

    <TextView
        android:id="@+id/tv_benchmarking_duration"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/benchmarking_cycles" />

    <TextView
        android:id="@+id/tv_benchmarking_cycles"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/average_time_per_task_during_benchmark_nanoseconds" />

    <TextView
        android:id="@+id/tv_benchmarking_avg_time"
        style="@style/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold" />

</LinearLayout>